@@ -4,6 +4,7 @@ v2.1.0
 - Changed episode name to reflect the episode name from IMDB.com if available.
 - Added drama cast, first released, country, and status to Kodi information display.
 - Added ability to cancel the gathering of drama information.
+- Added ability to remove a series from the "Recently Viewed" page.
 
 v2.0.5
 - Fixed code stripping unnecessary whitespace from beginning and end of all listings.
